// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Command Box Default 1`] = `
<div>
  <div
    className="MuiGrid-container-5 MuiGrid-spacing-xs-8-27 MuiGrid-align-items-xs-flex-end-15"
  >
    <div
      className="MuiGrid-item-6"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-102"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
        />
      </svg>
    </div>
    <div
      className="MuiGrid-item-6"
    >
      <form>
        <div
          className="MuiFormControl-root-111"
        >
          <label
            className="MuiFormLabel-root-126 MuiInputLabel-root-115 MuiInputLabel-formControl-120 MuiInputLabel-animated-123"
            data-shrink={false}
            htmlFor="command-input"
          >
            Enter a command
          </label>
          <div
            className="MuiInputBase-root-146 MuiInput-root-133 MuiInput-underline-137 MuiInputBase-formControl-147 MuiInput-formControl-134"
            onClick={[Function]}
          >
            <input
              aria-invalid={false}
              className="MuiInputBase-input-156 MuiInput-input-141"
              disabled={false}
              id="command-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="text"
            />
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots Date Chip With End Time 1`] = `
<div
  className="Component-root-199"
>
  <div
    className="MuiChip-root-201 Component-chip-200"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={-1}
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-226 MuiChip-icon-217"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M19.04 4.55l-1.42 1.42C16.07 4.74 14.12 4 12 4c-1.83 0-3.53.55-4.95 1.48l1.46 1.46C9.53 6.35 10.73 6 12 6c3.87 0 7 3.13 7 7 0 1.27-.35 2.47-.94 3.49l1.45 1.45C20.45 16.53 21 14.83 21 13c0-2.12-.74-4.07-1.97-5.61l1.42-1.42-1.41-1.42zM15 1H9v2h6V1zm-4 8.44l2 2V8h-2v1.44zM3.02 4L1.75 5.27 4.5 8.03C3.55 9.45 3 11.16 3 13c0 4.97 4.02 9 9 9 1.84 0 3.55-.55 4.98-1.5l2.5 2.5 1.27-1.27-7.71-7.71L3.02 4zM12 20c-3.87 0-7-3.13-7-7 0-1.28.35-2.48.95-3.52l9.56 9.56c-1.03.61-2.23.96-3.51.96z"
      />
    </svg>
    <span
      className="MuiChip-label-220"
    >
      8:25:17pm - 02/Sun/19
    </span>
  </div>
</div>
`;

exports[`Storyshots Date Chip With Start Time 1`] = `
<div
  className="Component-root-163"
>
  <div
    className="MuiChip-root-165 Component-chip-164"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={-1}
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-190 MuiChip-icon-181"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
      />
    </svg>
    <span
      className="MuiChip-label-184"
    >
      8:25:17pm - 02/Sun/19
    </span>
  </div>
</div>
`;

exports[`Storyshots Incident App Bar Default 1`] = `
<div
  className="Component-root-235"
>
  <header
    className="MuiPaper-root-246 MuiPaper-elevation4-252 MuiAppBar-root-237 MuiAppBar-positionStatic-241 MuiAppBar-colorPrimary-244 Component-root-235"
  >
    <div
      className="MuiToolbar-root-273 MuiToolbar-regular-275 MuiToolbar-gutters-274"
    >
      <h5
        className="MuiTypography-root-277 MuiTypography-h5-293 MuiTypography-colorInherit-306 Component-grow-236"
      />
    </div>
  </header>
</div>
`;

exports[`Storyshots Incident App Bar With Title 1`] = `
<div
  className="Component-root-313"
>
  <header
    className="MuiPaper-root-324 MuiPaper-elevation4-330 MuiAppBar-root-315 MuiAppBar-positionStatic-319 MuiAppBar-colorPrimary-322 Component-root-313"
  >
    <div
      className="MuiToolbar-root-351 MuiToolbar-regular-353 MuiToolbar-gutters-352"
    >
      <h5
        className="MuiTypography-root-355 MuiTypography-h5-371 MuiTypography-colorInherit-384 Component-grow-314"
      >
        Incidents for Sean!!
      </h5>
    </div>
  </header>
</div>
`;

exports[`Storyshots Incident App Bar With children 1`] = `
<div
  className="Component-root-391"
>
  <header
    className="MuiPaper-root-402 MuiPaper-elevation4-408 MuiAppBar-root-393 MuiAppBar-positionStatic-397 MuiAppBar-colorPrimary-400 Component-root-391"
  >
    <div
      className="MuiToolbar-root-429 MuiToolbar-regular-431 MuiToolbar-gutters-430"
    >
      <h5
        className="MuiTypography-root-433 MuiTypography-h5-449 MuiTypography-colorInherit-462 Component-grow-392"
      />
      <div>
        I'm a child node!!
      </div>
    </div>
  </header>
</div>
`;

exports[`Storyshots Incident Card With Children 1`] = `
<li
  className="MuiGridListTile-root"
>
  <div
    className="MuiGridListTile-tile"
  >
    <div
      className="MuiPaper-root MuiCard-root MovieCard-card-7 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        className="MuiCardHeader-root"
      >
        <div
          className="MuiCardHeader-avatar"
        >
          <div
            aria-label="Movie"
            className="MuiAvatar-root MuiAvatar-circle MovieCard-avatar-12 MuiAvatar-colorDefault"
          >
            D
          </div>
        </div>
        <div
          className="MuiCardHeader-content"
        >
          <span
            className="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
          >
            Incident Name
          </span>
          <span
            className="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
          >
            Incident Status: In Progress
          </span>
        </div>
      </div>
      <div
        className="MuiCardMedia-root MovieCard-media-8"
        style={
          Object {
            "backgroundImage": "url(\\"someSrc\\")",
          }
        }
        title="Incident Name"
      />
      <div
        className="MuiCardActions-root MovieCard-actions-9"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph"
        >
          Overview
        </p>
        <button
          aria-expanded={true}
          aria-label="Show more"
          className="MuiButtonBase-root MuiIconButton-root MovieCard-expand-10 MovieCard-expandOpen-11"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="MuiCollapse-container MuiCollapse-entered"
        style={
          Object {
            "minHeight": "0px",
          }
        }
      >
        <div
          className="MuiCollapse-wrapper"
        >
          <div
            className="MuiCollapse-wrapperInner"
          >
            <div
              className="MuiCardContent-root"
            >
              <p
                className="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph"
              >
                NYPD cop John McClane's plan to reconcile with his 
estranged wife is thrown for a serious loop when, minutes after he arrives 
at her office, the entire building is overtaken by a group of terrorists. 
With little help from the LAPD, wisecracking McClane sets out to single-handedly 
rescue the hostages and bring the bad guys down.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</li>
`;

exports[`Storyshots Incident Card With Title 1`] = `
<li
  className="MuiGridListTile-root"
>
  <div
    className="MuiGridListTile-tile"
  >
    <div
      className="MuiPaper-root MuiCard-root MovieCard-card-1 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        className="MuiCardHeader-root"
      >
        <div
          className="MuiCardHeader-avatar"
        >
          <div
            aria-label="Movie"
            className="MuiAvatar-root MuiAvatar-circle MovieCard-avatar-6 MuiAvatar-colorDefault"
          >
            D
          </div>
        </div>
        <div
          className="MuiCardHeader-content"
        >
          <span
            className="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
          >
            Incident Name
          </span>
          <span
            className="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
          >
            Incident Status: In Progress
          </span>
        </div>
      </div>
      <div
        className="MuiCardMedia-root MovieCard-media-2"
        style={
          Object {
            "backgroundImage": "url(\\"someSrc\\")",
          }
        }
        title="Incident Name"
      />
      <div
        className="MuiCardActions-root MovieCard-actions-3"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph"
        >
          Overview
        </p>
        <button
          aria-label="Show more"
          className="MuiButtonBase-root MuiIconButton-root MovieCard-expand-4"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</li>
`;

exports[`Storyshots Search App Bar Default 1`] = `
<div
  className="SearchAppBar-root-13"
>
  <header
    className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary SearchAppBar-root-13 MuiPaper-elevation4"
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h5
        className="MuiTypography-root SearchAppBar-grow-14 MuiTypography-h5 MuiTypography-colorInherit"
      />
    </div>
  </header>
</div>
`;

exports[`Storyshots Search App Bar With Title 1`] = `
<div
  className="SearchAppBar-root-20"
>
  <header
    className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary SearchAppBar-root-20 MuiPaper-elevation4"
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h5
        className="MuiTypography-root SearchAppBar-grow-21 MuiTypography-h5 MuiTypography-colorInherit"
      >
        Movies for Sean!!
      </h5>
    </div>
  </header>
</div>
`;

exports[`Storyshots Search App Bar With children 1`] = `
<div
  className="SearchAppBar-root-27"
>
  <header
    className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary SearchAppBar-root-27 MuiPaper-elevation4"
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h5
        className="MuiTypography-root SearchAppBar-grow-28 MuiTypography-h5 MuiTypography-colorInherit"
      />
      <div>
        I'm a child node!!
      </div>
    </div>
  </header>
</div>
`;

exports[`Storyshots Search Box Default 1`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-flex-end"
  >
    <div
      className="MuiGrid-root MuiGrid-item"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-search fa-w-16 "
        data-icon="search"
        data-prefix="fas"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item"
    >
      <div
        className="MuiFormControl-root MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink={false}
          htmlFor="movie-title-input"
          id="movie-title-input-label"
        >
          Enter your movie title
        </label>
        <div
          className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiInput-input"
            disabled={false}
            id="movie-title-input"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </div>
  </div>
</li>
`;
